test1/force-app/main/default/objects/Sell_Item__c/Sell_Item__c.object-meta.xml
<CustomObject>
    <label>Sell Item</label>
    <nameField>
        <label>Sell Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>