test1/force-app/main/default/objects/Sell_Item__c/fields/Sell_Item_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sell_Item_Desc__c</fullName>
    <label>Sell Item Desc</label>
    <type>TextArea</type>
</CustomField>