test1/force-app/main/default/objects/Sell_Item__c/fields/Sell_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Sell_Item_Price__c</fullName>
    <label>Sell Item Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>